添加部分提示词

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             <p>互联网垃圾桶</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">Twitter - 全世界最大的社交平台；国际新闻吃瓜一线</span>
                 </li>
             </ul>
         </div>
@@ -164,7 +164,7 @@
                             <p>简中垃圾桶</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">微博 - 国内新闻吃瓜一线 / 女厕所 / 找乐子</span>
                 </li>
             </ul>
             <h4 id="科技">科技新闻</h4>
@@ -179,7 +179,7 @@
                             <p>快讯，科技，金融，投资，房产，汽车，互联网</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">36kr - 科技新闻 / 关注科技前沿动态</span>
                 </li>
                 <li class="tooltip">
                     <div class="website" onclick="window.open('https://www.huxiu.com/', '_blank')">
@@ -191,7 +191,7 @@
                             <p>聚合优质的创新信息与人群，捕获精选|深度|犀利的商业科技资讯</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">虎嗅 - 商业科技资讯 / 砖家点评</span>
                 </li>
                 <li class="tooltip">
                     <div class="website" onclick="window.open('https://www.kejixun.com/', '_blank')">
@@ -203,7 +203,7 @@
                             <p>综合科技生活门户网站</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">科技讯 - 关注科技生活</span>
                 </li>
             </ul>
             <h4 id="论坛">论坛</h4>
@@ -218,7 +218,7 @@
                             <p>综合性论坛|电影、阅读、音乐...</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">豆瓣 - 影评、书评、音乐分享 / 小组讨论搞事</span>
                 </li>
                 <li class="tooltip">
                     <div class="website" onclick="window.open('https://nag.cn', '_blank')">
@@ -230,7 +230,7 @@
                             <p>游戏社区</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">NGA - 资深玩家社区（？</span>
                 </li>
             </ul>
         </div>
@@ -247,7 +247,7 @@
                             <p>哔咪动漫</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">M站 - 在线动漫</span>
                 </li>
                 <li class="tooltip">
                     <div class="website" onclick="window.open('https://www.senfun.net/', '_blank')">
@@ -259,7 +259,7 @@
                             <p>一个在线的高质量动漫网站</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">森之屋 - 在线动漫</span>
                 </li>
                 <li class="tooltip">
                     <div class="website" onclick="window.open('https://acgfantuan.com/', '_blank')">
@@ -271,7 +271,7 @@
                             <p>免费动漫在线看</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">饭团动漫 - 在线动漫</span>
                 </li>
                 <li class="tooltip">
                     <div class="website" onclick="window.open('https://www.yhdmp.live/', '_blank')">
@@ -283,7 +283,7 @@
                             <p>野火烧不尽，春风吹又生</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">樱花动漫 - 在线动漫</span>
                 </li>
                 <li class="tooltip">
                     <div class="website" onclick="window.open('https://www.scfun.net/', '_blank')">
@@ -295,7 +295,7 @@
                             <p>聚合播放</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">双辞动漫 - 在线动漫</span>
                 </li>
                 <li class="tooltip">
                     <div class="website" onclick="window.open('https://www.edddm.com/', '_blank')">
@@ -307,7 +307,7 @@
                             <p>发布页</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">edd动漫 - 在线动漫</span>
                 </li>
                 <li class="tooltip">
                     <div class="website" onclick="window.open('https://www.bbddm.com/', '_blank')">
@@ -319,7 +319,7 @@
                             <p>在线观看</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">百宝袋动漫 - 在线动漫</span>
                 </li>
                 <li class="tooltip">
                     <div class="website" onclick="window.open('https://www.dalv666.top/', '_blank')">
@@ -331,7 +331,7 @@
                             <p>发布页</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">打驴动漫 - 在线动漫</span>
                 </li>
                 <li class="tooltip">
                     <div class="website" onclick="window.open('https://www.ikanfan.com/', '_blank')">
@@ -343,7 +343,7 @@
                             <p>界面比较高级？</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">爱看番 - 在线动漫</span>
                 </li>
                 <li class="tooltip">
                     <div class="website" onclick="window.open('https://omofun.tv/', '_blank')">
@@ -355,7 +355,7 @@
                             <p>在线观看</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">omofun - 在线动漫</span>
                 </li>
                 <li class="tooltip">
                     <div class="website" onclick="window.open('https://www.mandao.tv/', '_blank')">
@@ -367,7 +367,7 @@
                             <p>在线观看</p>
                         </div>
                     </div>
-                    <span class="tooltiptext"></span>
+                    <span class="tooltiptext">漫岛动漫 - 在线动漫/span>
                 </li>
                 <li class="tooltip">
                     <div class="website" onclick="window.open('https://lixacg.cf/', '_blank')">
