--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <li><a class="clickOnSubmenu" href="#漫画">漫画</a></li>
                     <li><a class="clickOnSubmenu" href="#游戏">游戏</a></li>
                     <li><a class="clickOnSubmenu" href="#小说">小说</a></li>
+                    <li><a class="clickOnSubmenu" href="#二刺螈">窝趣，二刺螈！</a></li>
                 </ul>
             </div>
             <div class="submenu sidegroup-3">
@@ -82,7 +83,7 @@
                 </ul>
             </div>
             <div class="submenu sidegroup-5">
-                <h4 class="clickOnSubmenu" onclick="showSubmenu('sidegroup-5')">资源发现</h4>
+                <h4 class="clickOnSubmenu" onclick="showSubmenu('sidegroup-5')">发现</h4>
                 <ul class="clickOnSubmenu">
                     <li><a class="clickOnSubmenu" href="#美图">美图</a></li>
                     <li><a class="clickOnSubmenu" href="#UI图标">UI图标</a></li>
@@ -183,6 +184,42 @@
                         </div>
                     </div>
                     <span class="tooltiptext">微博 - 国内新闻吃瓜一线 / 女厕所 / 找乐子</span>
+                </li>
+                <li class="tooltip">
+                    <div class="website clickOnWebsite" onclick="window.open('http://xinhuanet.com/', '_blank')">
+                        <div class="web-icon">
+                            <img class="clickOnWebsite" src="image/icon/xinhua.ico" alt="">
+                        </div>
+                        <div class="web-desc clickOnWebsite">
+                            <b>新华社</b>
+                            <p>国内新闻</p>
+                        </div>
+                    </div>
+                    <span class="tooltiptext">数一数二</span>
+                </li>
+                <li class="tooltip">
+                    <div class="website clickOnWebsite" onclick="window.open('https://www.huanqiu.com/', '_blank')">
+                        <div class="web-icon">
+                            <img class="clickOnWebsite" src="image/icon/huanqiu.png" alt="">
+                        </div>
+                        <div class="web-desc clickOnWebsite">
+                            <b>环球时报</b>
+                            <p>国际新闻</p>
+                        </div>
+                    </div>
+                    <span class="tooltiptext">经过加工滴内宣</span>
+                </li>
+                <li class="tooltip">
+                    <div class="website clickOnWebsite" onclick="window.open('http://m.cankaoxiaoxi.com/', '_blank')">
+                        <div class="web-icon">
+                            <img class="clickOnWebsite" src="image/icon/cankao.ico" alt="">
+                        </div>
+                        <div class="web-desc clickOnWebsite">
+                            <b>参考消息</b>
+                            <p>精选国外新闻</p>
+                        </div>
+                    </div>
+                    <span class="tooltiptext">屎里淘金了属于是</span>
                 </li>
             </ul>
             <h4 id="科技">科技新闻</h4>
@@ -550,6 +587,18 @@
                     <span class="tooltiptext">原神wiki</span>
                 </li>
                 <li class="tooltip">
+                    <div class="website clickOnWebsite" onclick="window.open('https://webstatic.mihoyo.com/ys/app/interactive-map', '_blank')">
+                        <div class="web-icon">
+                            <img class="clickOnWebsite" src="image/icon/mihoyo.ico" alt="">
+                        </div>
+                        <div class="web-desc clickOnWebsite">
+                            <b>米游社大地图</b>
+                            <p>找资源</p>
+                        </div>
+                    </div>
+                    <span class="tooltiptext">原批竟是我自己</span>
+                </li>
+                <li class="tooltip">
                     <div class="website clickOnWebsite" onclick="window.open('https://game8.co/', '_blank')">
                         <div class="web-icon">
                             <img class="clickOnWebsite" src="image/icon/game8.png" alt="">
@@ -721,6 +770,93 @@
                     <span class="tooltiptext">基于阅读、交流、分享轻小说/动画/漫画/游戏等ACGN内容的泛文化社区。国内知名轻小说论坛。</span>
                 </li>
             </ul>
+            <h4 id="二刺螈">窝趣！二刺螈！</h4>
+            <ul>
+                <li class="tooltip">
+                    <div class="website clickOnWebsite" onclick="window.open('https://zh.moegirl.org.cn/Mainpage', '_blank')">
+                        <div class="web-icon">
+                            <img class="clickOnWebsite" src="image/icon/mengniang.ico" alt="">
+                        </div>
+                        <div class="web-desc clickOnWebsite">
+                            <b>萌娘百科</b>
+                            <p>查资料捏</p>
+                        </div>
+                    </div>
+                    <span class="tooltiptext">dddd</span>
+                </li>
+                <li class="tooltip">
+                    <div class="website clickOnWebsite" onclick="window.open('http://www.acg.gy/', '_blank')">
+                        <div class="web-icon">
+                            <img class="clickOnWebsite" src="image/icon/llss.ico" alt="">
+                        </div>
+                        <div class="web-desc clickOnWebsite">
+                            <b>琉璃神社</b>
+                            <p>acg资源站</p>
+                        </div>
+                    </div>
+                    <span class="tooltiptext">呃呃</span>
+                </li>
+                <li class="tooltip">
+                    <div class="website clickOnWebsite" onclick="window.open('https://nyaa.inaris.me/', '_blank')">
+                        <div class="web-icon">
+                            <img class="clickOnWebsite" src="image/icon/nyaa.png" alt="">
+                        </div>
+                        <div class="web-desc clickOnWebsite">
+                            <b>nyaa 表站</b>
+                            <p>最大的 acgn 种子站</p>
+                        </div>
+                    </div>
+                    <span class="tooltiptext">dddd</span>
+                </li>
+                <li class="tooltip">
+                    <div class="website clickOnWebsite" onclick="window.open('https://www.tokyotosho.info/', '_blank')">
+                        <div class="web-icon">
+                            <img class="clickOnWebsite" src="image/icon/tokyo.ico" alt="">
+                        </div>
+                        <div class="web-desc clickOnWebsite">
+                            <b>東京 図書館</b>
+                            <p>同上</p>
+                        </div>
+                    </div>
+                    <span class="tooltiptext">有点乱七八糟的界面</span>
+                </li>
+                <li class="tooltip">
+                    <div class="website clickOnWebsite" onclick="window.open('https://www.dongmanhuayuan.com/', '_blank')">
+                        <div class="web-icon">
+                            <img class="clickOnWebsite" src="image/icon/dmhy.ico" alt="">
+                        </div>
+                        <div class="web-desc clickOnWebsite">
+                            <b>动漫花园</b>
+                            <p>国内知名动漫资源站</p>
+                        </div>
+                    </div>
+                    <span class="tooltiptext">比较多拿来剪AMV好像</span>
+                </li>
+                <li class="tooltip">
+                    <div class="website clickOnWebsite" onclick="window.open('http://www.miobt.com/', '_blank')">
+                        <div class="web-icon">
+                            <img class="clickOnWebsite" src="image/icon/miobt.png" alt="">
+                        </div>
+                        <div class="web-desc clickOnWebsite">
+                            <b>mio 磁力站</b>
+                            <p>一个国内磁力资源站</p>
+                        </div>
+                    </div>
+                    <span class="tooltiptext"></span>
+                </li>
+                <li class="tooltip">
+                    <div class="website clickOnWebsite" onclick="window.open('https://acg.rip/', '_blank')">
+                        <div class="web-icon">
+                            <img class="clickOnWebsite" src="image/icon/acgrip.ico" alt="">
+                        </div>
+                        <div class="web-desc clickOnWebsite">
+                            <b>ACG RIP</b>
+                            <p>同上</p>
+                        </div>
+                    </div>
+                    <span class="tooltiptext"></span>
+                </li>
+            </ul>
         </div>
         <div class="website-group">
             <h4 id="视频">视频</h4>
@@ -785,7 +921,6 @@
                     </div>
                     <span class="tooltiptext">edX是哈佛大学和麻省理工学院共同创立的非营利网络教育项目，旨在为全球提供来自哈佛大学、麻省理工学院、加州大学伯克利分校、清华大学、北京大学、香港大学、香港科技大学等全球顶尖高校及组织的慕课</span>
                 </li>
-
             </ul>
             <h4 id="图文">图文</h4>
             <ul>
@@ -990,7 +1125,7 @@
                         </div>
                         <div class="web-desc clickOnWebsite">
                             <b>搜狗识图</b>
-                            <p>国内图片搜索/p>
+                            <p>国内图片搜索</p>
                         </div>
                     </div>
                     <span class="tooltiptext">国内通用的搜图网站</span>
@@ -1059,6 +1194,89 @@
             </ul>
         </div>
         <div class="website-group">
+            <h4 id="字体">字体</h4>
+            <ul>
+                <li class="tooltip">
+                    <div class="website clickOnWebsite" onclick="window.open('https://www.diyiziti.com/', '_blank')">
+                        <div class="web-icon">
+                            <img class="clickOnWebsite" src="image/icon/diyiziti.ico" alt="">
+                        </div>
+                        <div class="web-desc clickOnWebsite">
+                            <b>第一字体</b>
+                            <p>字体搜索、设计</p>
+                        </div>
+                    </div>
+                    <span class="tooltiptext">目前最强大、字库最全的字体转换器和艺术字体在线生成器</span>
+                </li>
+                <li class="tooltip">
+                    <div class="website clickOnWebsite" onclick="window.open('https://www.qiuziti.com/', '_blank')">
+                        <div class="web-icon">
+                            <img class="clickOnWebsite" src="image/icon/qiuziti.png" alt="">
+                        </div>
+                        <div class="web-desc clickOnWebsite">
+                            <b>求字体</b>
+                            <p>上传图片找字体</p>
+                        </div>
+                    </div>
+                    <span class="tooltiptext">上传图片找字体、字体实时预览、字体下载、字体版权检测、字体补齐等</span>
+                </li>
+                <li class="tooltip">
+                    <div class="website clickOnWebsite" onclick="window.open('https://font.chinaz.com/', '_blank')">
+                        <div class="web-icon">
+                            <img class="clickOnWebsite" src="image/icon/zziti.ico" alt="">
+                        </div>
+                        <div class="web-desc clickOnWebsite">
+                            <b>站长字体</b>
+                            <p>搜字体</p>
+                        </div>
+                    </div>
+                    <span class="tooltiptext">rt</span>
+                </li>
+                <li class="tooltip">
+                    <div class="website clickOnWebsite" onclick="window.open('https://www.hellofont.cn/', '_blank')">
+                        <div class="web-icon">
+                            <img class="clickOnWebsite" src="image/icon/ziyou.ico" alt="">
+                        </div>
+                        <div class="web-desc clickOnWebsite">
+                            <b>字由</b>
+                            <p>跟前面差不多</p>
+                        </div>
+                    </div>
+                    <span class="tooltiptext">字由是为设计师量身定做的一款字体下载管理工具。</span>
+                </li>
+            </ul>
+        </div>
+        <div class="website-group">
+            <h4 id="插件">插件</h4>
+            <ul>
+                <li class="tooltip">
+                    <div class="website clickOnWebsite" onclick="window.open('https://greasyfork.org/zh-CN', '_blank')">
+                        <div class="web-icon">
+                            <img class="clickOnWebsite" src="image/icon/fork.png" alt="">
+                        </div>
+                        <div class="web-desc clickOnWebsite">
+                            <b>greasyfork</b>
+                            <p>油猴插件</p>
+                        </div>
+                    </div>
+                    <span class="tooltiptext">dddd</span>
+                </li>
+                <li class="tooltip">
+                    <div class="website clickOnWebsite" onclick="window.open('https://microsoftedge.microsoft.com/addons/Microsoft-Edge-Extensions-Home?hl=zh-CN', '_blank')">
+                        <div class="web-icon">
+                            <img class="clickOnWebsite" src="image/icon/edge.png" alt="">
+                        </div>
+                        <div class="web-desc clickOnWebsite">
+                            <b>edge 插件商城</b>
+                            <p>rt</p>
+                        </div>
+                    </div>
+                    <span class="tooltiptext">rt</span>
+                </li>
+
+            <ul>
+        </div>
+        <div class="website-group">
             <h4 id="美图">美图</h4>
             <ul>
                 <li class="tooltip">
@@ -1066,7 +1284,7 @@
                         <div class="web-icon">
                             <img class="clickOnWebsite" src="image/icon/pixiv.png" alt="">
                         </div>
-                        <div class="web-desc clickOnWebsite website-magic">
+                        <div class="web-desc clickOnjWebsite website-magic">
                             <b>pixiv</b>
                             <p>知名二刺螈插画网站</p>
                         </div>
@@ -1083,7 +1301,7 @@
                             <p>素材收集</p>
                         </div>
                     </div>
-                    <span class="tooltiptext">花瓣网, 设计师寻找灵感的天堂！图片素材领导者，帮你采集,发现网络上你喜欢的事物.你可以用它收集灵感,保存有用的素材,计划旅行,晒晒自己想要的东西。</span>
+                    <span class="tooltiptext">花瓣网, 设计师寻找灵感的天堂！图片素材领导者</span>
                 </li>
                 <li class="tooltip">
                     <div class="website clickOnWebsite" onclick="window.open('https://www.zcool.com.cn/', '_blank')">
@@ -1113,6 +1331,9 @@
         </div>
         <!--
             模板保存：
+        <div class="website-group">
+            <h4 id=""></h4>
+            <ul>
                 <li class="tooltip">
                     <div class="website clickOnWebsite" onclick="window.open('', '_blank')">
                         <div class="web-icon">
@@ -1125,7 +1346,8 @@
                     </div>
                     <span class="tooltiptext"></span>
                 </li>
-
+            <ul>
+        </div>
         -->
     </div>
 </body>
