--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     <span class="tooltiptext">豆瓣 - 影评、书评、音乐分享 / 小组讨论搞事</span>
                 </li>
                 <li class="tooltip">
-                    <div class="website clickOnWebsite" onclick="window.open('https://nag.cn', '_blank')">
+                    <div class="website clickOnWebsite" onclick="window.open('https://nga.cn', '_blank')">
                         <div class="web-icon">
                             <img class="clickOnWebsite" src="image/icon/nga.png" alt="">
                         </div>
