--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <li><a class="engine-bing" href="#" onclick="changeEngine(bing, 'bing')">bing</a></li>
                 <li><a class="engine-bilibili" href="#" onclick="changeEngine(bilibili, 'bilibili')">bilibili</a></li>
                 <li><a class="engine-zhihu" href="#" onclick="changeEngine(zhihu, 'zhihu')">知乎搜索</a></li>
+                <li><a class="engine-scholar" href="#" onclick="changeEngine(scholar, 'scholar')">谷歌学术</a></li>
                 <li><a class="engine-weibo" href="#" onclick="changeEngine(weibo, 'weibo')">微博搜索</a></li>
                 <li><a class="engine-ip" href="#" onclick="changeEngine(ip, 'ip')">ip搜索</a></li>
             </ul>
